pages/0.11.0/unity/unity_get_started_installation.content.md
### Requirements:

* a Windows computer,
* a Unity3D installation (latest recommended),
* [optional] an Oculus Quest headset.

### Installing the Unity Engine plugin

If you start from scratch, just create a new, empty project in Unity. It is recommended to always use the most recent Unity version in terms of major version number (e.g., 2020.x.x, 2021.x.x, etc). Unity and the VirtualGrasp SDK are very robust in terms of up- or downgrading inside a major Unity version for your projects.

{% include image.html file="unity/unity_new_project.png" alt="New Unity Project" caption="Create a New Project in Unity" %}

To import VirtualGrasp into your Unity project, go to Assets → Import Package → Custom Package and import the VirtualGrasp *.unitypackage. After doing this, you should find the main VirtualGrasp installation under ThirdParty/VirtualGrasp in your Unity project. 

### Updating the Unity Engine plugin

If you are updating the VG SDK in your project, it we **strongly recommend to remove the old version before importing the new one**, to avoid clutter of old files. The whole VG SDK is placed into a single folder (by default ThirdParty/VirtualGrasp) to make the update process as convenient as possible for you. If you are customizing files inside the VG SDK, you should backup your old state or use a versioning system such as git.

### Getting Started with VirtualGrasp and the Console View

There is only one minimal main component you have to add by default to use and configure VirtualGrasp: [MyVirtualGrasp.cs](unity_component_myvirtualgrasp.0.11.0.html). Adding a component to your scene and playing your scene, you should see some messages produced by the plugin in the Console Window.

You can identify that VG has been successfully initialized when a message like these appear on the Console, also informing you of the SDK version:

{% include callout.html content="Initialized VirtualGrasp SDK 0.11.0 (core 0.6.6)." %}

<!--{% include image.html file="unity/unity_console_initialization.png" alt="VG Console Initialization" caption="VirtualGrasp initialization message in the Unity console." %}-->

{% include tip.html content="Whenever something related to the VirtualGrasp plugin does not work as expected, first have a look at the Console. In most cases, you will be able to identify issues through error messages that are generated by the plugin." %}